@@ -471,7 +471,7 @@ public class DataController implements DataApi, AuthorizingComponent {
 
         // TODO: linking entity sets , linking id (if needed)
         // getNeighborEntitySetIds() returns source, destination, and edge EntitySet ids
-        Set<UUID> neighborEntitySetIds = dgm.getNeighborEntitySetIds( Set.of( vertexEntitySetId ) );
+        Set<UUID> neighborEntitySetIds = dgm.getNeighborEntitySetIds( ImmutableSet.of( vertexEntitySetId ) );
         Set<UUID> allEntitySetIds = ImmutableSet.<UUID>builder()
                 .add( vertexEntitySetId )
                 .addAll( neighborEntitySetIds )
